--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,18 @@ spring:
 
 ---
 
-
 spring:
   config:
     activate:
       on-profile: common
+  servlet:
+    multipart:
+      max-file-size: 10MB  #파일 하나당 크기
+      max-request-size: 100MB #요청 전체 크기
+
+server:
+  tomcat:
+    max-swallow-size: -1
 
 springdoc:
   swagger-ui:
